--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ ul.menu {
 
 /*=============================Banner=============================*/
 .banner {
-  background-image: url("https://res.cloudinary.com/dxssqb6l8/image/upload/v1605294054/young-woman-enjoying-beautiful-scenery-of-lago-di-braies-italy-picjumbo-com_aa0fvw.jpg");
+  background-image: url("https://lh5.googleusercontent.com/proxy/gu6XitQ777r-Baciev6nS0nVdy74aihxarkPH4tYXy92OKE3ZCsj08zMIkYJQvPSo3nYSeG41zIQzH26KupP95BFJMsydIwY1ED6ajvGTxQPueT5xU9YyZBUdcLBYuY");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
